# jquants-api-client-python

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature-request.yaml  question.yaml
.github/workflows/: build.yml  publish.yml  test.yml
examples/: 20220825-000-write-refresh_token.ipynb  20220825-001-price-movement.ipynb  20220825-002-sector.ipynb  20220825-003-dividend.ipynb  20220825-004-annual-dividend-history.ipynb  20220927-005-jquants-api-starter.ipynb  20230126-006-mkdeco-jquants-kaggle-8th.ipynb  20260119-007-jquants-api-v2-starter.ipynb  README.md
jquantsapi/: __init__.py  client.py  client_v2.py  constants.py  enums.py
jquantsapi/apis/: __init__.py  base.py
jquantsapi/apis/v1/: __init__.py  derivatives.py  fins.py  indices.py  listed.py  markets.py  prices.py
jquantsapi/apis/v2/: __init__.py  bulk.py  derivatives.py  equities.py  fins.py  indices.py  markets.py  td.py
src/: client.py
src/jquants-api-client/: dummy.py
tests/: test_client.py  test_client_v2.py
