[tool.poetry]
name = "jquants-api-client"
version = "0.0.0" # use poetry-dynamic-versioning
authors = [
    "J-Quants Project Contributors <j-quants@jpx.co.jp>",
]
description = "J-Quants API Client Library"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["jquants", "api", "client", "J-Quants"]
packages = [
    { include = "jquantsapi" }
]
homepage = "https://github.com/J-Quants/jquants-api-client-python"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/J-Quants/jquants-api-client-python/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.23.0"
types-requests = "^2.28.5"
types-python-dateutil = "^2.8.19"
pandas = [
     { version = "~1.3.5", python = ">=3.7.1,<3.8" },
     { version = "^1.4.3", python = ">=3.8" }
 ]
 numpy = [
     { version = "~1.21.6", python = ">=3.7.1,<3.8" },
     { version = "^1.22.4", python = ">=3.8" }
 ]
urllib3 = "^1.26.0"
tomli = { version = "^2.0.1", python = ">=3.7,<3.11" }
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^1.0.1"
pyproject-flake8 = "^0.0.1-alpha.4"
pytest = "^7.2.2"
pytest-cov = "^3.0.0"
poetry-dynamic-versioning = "^0.17.1"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503,"
per-file-ignores = "__init__.py:F401"
exclude = ".venv"

[tool.isort]
profile = "black"
