[tool.poetry]
name = "jquants-api-client"
version = "0.0.0" # use poetry-dynamic-versioning
authors = [
    "J-Quants Project Contributors <j-quants@jpx.co.jp>",
]
description = "J-Quants API Client Library"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["jquants", "api", "client", "J-Quants"]
packages = [
    { include = "jquantsapi" }
]
homepage = "https://github.com/J-Quants/jquants-api-client-python"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/J-Quants/jquants-api-client-python/issues"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
pandas = "^2.2.0"
numpy = ">=1.22.4"
tomli = { version = "^2.0.1", python = "<3.11" }
typing_extensions = { version = "^4.5.0", python = "<3.13" }
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.10.1"
flake8 = "^5.0.0"
mypy = "^1.9.0"
pyproject-flake8 = "^5.0.0"
pytest = "8.1.1"
pytest-cov = "^5.0.0"
types-requests = "^2.31.0"
types-python-dateutil = "^2.9.0"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503,"
per-file-ignores = "__init__.py:F401"
exclude = ".venv"

[tool.isort]
profile = "black"
